# musicky

./: .editorconfig  .gitignore  .mcp.json  ARCHITECTURE_DECISIONS.md  AUDIO_PLAYER_DOCS.md  AUTO_CLOSE_IMPLEMENTATION.md  CONTRIBUTING.md  COPILOT_GUIDE.md  DOTNET_MIGRATION_ANALYSIS.md  FILE_BROWSER_DOCS.md  LAYOUT_DOCS.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  RESPONSIVE_IMPLEMENTATION.md  TELEFUNC_HANDLER_REFACTORING_PLAN.md  create-test-edit.js  create-test-music.js  database-2025-07-04T19-35-24-551Z.sqlite  database.sqlite  eslint.config.ts  fastify-entry.ts  global.d.ts  notes.sh  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
api/: file-browser.telefunc.ts
components/: AudioPlayerDemo.tsx  DJSetItems.telefunc.ts  DJSetSelector.tsx  DJSetSongList.tsx  DJSets.telefunc.ts  FileBrowser.tsx  GlobalAudioPlayer.tsx  Link.tsx  MP3Library.css  MP3Library.telefunc.ts  MP3Library.tsx  MP3LibrarySimplified.tsx  MP3LibraryWithDJSets.tsx  MP3MetadataViewer.telefunc.ts  MP3MetadataViewer.tsx  MusicSearch.telefunc.ts  PendingEditsManager.tsx  PlayButton.tsx  ResponsiveIndicator.tsx  Settings.css  Settings.telefunc.ts  Settings.tsx  SongSearchPopup.tsx  SortablePhaseItem.tsx  StatusExample.tsx  TagSync.css  TagSync.telefunc.ts  TagSync.tsx  pending-edits-ui.tsx
lib/: ai-tagger.ts  (+36 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
(+238 files in other folders)
